--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
   --primary-color: rgb(228, 225, 225);
   --secondary-color: #2F80ED;
   --third-color: #5861E2;
+  --dark-color: rgb(17, 17, 17);
 }
 
 *{
