--- a/src/styles/components/HeaderPatients.css
+++ b/src/styles/components/HeaderPatients.css
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  background-color: red;
   width: 60px;
   height: 60px;
+  background-color: var(--secondary-color);
 }
