--- a/src/styles/containers/notePage.css
+++ b/src/styles/containers/notePage.css
@@ -1,10 +1,5 @@
-.login {
+.note-page {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.img {
-  border-radius: 50%;
-  margin: 15px;
 }
