--- a/src/styles/containers/patientPage.css
+++ b/src/styles/containers/patientPage.css
@@ -1,10 +1,6 @@
-.login {
+.patient-page {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.img {
-  border-radius: 50%;
-  margin: 15px;
+  width: 90vw;
 }
