--- a/src/styles/components/DateDivision.css
+++ b/src/styles/components/DateDivision.css
@@ -2,7 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 100%;
+  /* width: 100%; */
+  width: 220px;
   margin: 20px 0;
 }
 
@@ -13,6 +14,11 @@
 
 .line {
   border-color: black;
-  width: 30vw;
+  width: 80px;
   height: 0.5px;
+}
+
+@media only screen and (min-width: 767px) {
+  .date-division {
+  }
 }
