--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,16 @@ html,
 body {
   font-family: var(--font-principal);
 }
+
+a {
+  color: var(--dark-color); 
+  text-decoration: none;
+}
+
+button {
+  color: var(--dark-color)
+}
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
