safari color bug 1

--- a/src/styles/components/MainButton.css
+++ b/src/styles/components/MainButton.css
@@ -4,6 +4,6 @@
   background-color: var(--third-color);
   border: none;
   border-radius: 5px;
-  color: var(--primary-color);
+  color: var(--dark-color);
   font-weight: bold;
 }
