--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,7 +81,7 @@ button {
   --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     /* --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
