--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis&family=Inter:wght@100;200400;500;800;900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 :root {
   --font-principal: 'Inter', sans-serif;
@@ -28,6 +32,11 @@ body {
 html,
 body {
   font-family: var(--font-principal);
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 a button {
