styles update december

--- a/src/styles/components/PatientsList.css
+++ b/src/styles/components/PatientsList.css
@@ -4,8 +4,13 @@
   align-items: center;
 }
 
+.patient-link {
+  color: black;
+  text-decoration: none;
+}
 
-.patient-button {
+
+/* .patient-button {
   min-width: 270px;
   max-width: 350px;
   margin: 7px;
@@ -17,9 +22,9 @@
   border-radius: 4px;
   padding: 10px 15px;
   color: var(--dark-color);
-} 
+}  */
 
-.title, .subtitle {
+/* .title, .subtitle {
   margin: 0;
 }
 
@@ -36,4 +41,4 @@
   button, a {
     color: var(--dark-color);
   }
-}
+} */
