--- a/src/styles/containers/patients.css
+++ b/src/styles/containers/patients.css
@@ -3,3 +3,42 @@
   flex-direction: column;
   align-items: center;
 }
+
+.dashboard {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .patients {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+  }
+
+  .dashboard {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+    max-width: 320px;
+    margin: 7px 0px 10px 30px;
+    border: 1px solid var(--secondary-color);
+    border-radius: 4px;
+    padding: 20px 25px; 
+  }
+
+  .dashboard h2 {
+    font-weight: bold;
+    font-size: 1.8rem;
+  }
+
+  .dashboard p {
+    font-size: 1.6rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .dashboard {
+    max-width: 780px;
+  }
+}
