--- a/src/styles/components/TransparentButton.css
+++ b/src/styles/components/TransparentButton.css
@@ -12,3 +12,18 @@
   border: 1px solid var(--secondary-color);
   border-radius: 4px;
 }
+
+@media only screen and (min-width: 768px) {
+  .transparent-button {
+    min-width: 300px;
+    max-width: 500px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .transparent-button {
+    min-width: 500px;
+    max-width: 700px;
+    padding: 15px 10px;
+  }
+}
