--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
   --font-principal: 'Inter', sans-serif;
   --primary-color: rgb(228, 225, 225);
   --secondary-color: #2f80ed;
-  --third-color: #5861E2;
+  --third-color: #1f4e64;
   --dark-color: rgb(17, 17, 17);
 }
 
