--- a/src/styles/components/PatientButton.css
+++ b/src/styles/components/PatientButton.css
@@ -1,15 +1,15 @@
 .patient-button {
+  width: 80vw;
   min-width: 270px;
-  max-width: 350px;
   margin: 7px;
+  padding: 10px 15px;
   background-color: transparent;
+  color: var(--dark-color);
   font-size: 1.6rem;
   line-height: 2rem;
   text-align: left;
   border: 1px solid var(--secondary-color);
   border-radius: 4px;
-  padding: 10px 15px;
-  color: var(--dark-color);
 } 
 
 .title, .subtitle {
@@ -34,14 +34,14 @@
 @media only screen and (min-width: 768px) {
   .patient-button {
     min-width: 320px;
-    max-width: 500px;
+    max-width: 400px;
   }
 }
 
 @media only screen and (min-width: 1024px) {
   .patient-button {
-    min-width: 520px;
-    max-width: 700px;
+    min-width: 400px;
+    max-width: 500px;
     padding: 10px 15px;
   }
 
