--- a/src/styles/components/AllNotes.css
+++ b/src/styles/components/AllNotes.css
@@ -1,16 +1,35 @@
 .all-notes {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  max-width: 92vw;
 }
 
 .note-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 0 18px;
+  word-wrap: break-word;
+  word-break: break-word;
+  white-space: normal;
 }
 
 .note-content {
   font-size: 1.6rem;
-  margin: 0 10px;
-  padding: 0 10px;
+  width: 80vw;
+}
+
+@media only screen and (min-width: 768px) {
+  .note-content {
+    font-size: 1.6rem;
+    width: 80vw;
+    max-width: 400px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .note-content {
+    max-width: 500px;
+  }
 }
