--- a/src/styles/components/InputGiant.css
+++ b/src/styles/components/InputGiant.css
@@ -7,10 +7,23 @@
   border-radius: 7px;
   margin: 5px;
   padding: 10px;
+  font-size: 1.4rem;
 }
 
 .form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .input-giant {
+    font-size: 1.6rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .input-giant {
+    font-size: 2rem;
+  }
 }
