--- a/src/styles/components/MainButton.css
+++ b/src/styles/components/MainButton.css
@@ -4,6 +4,13 @@
   background-color: var(--third-color);
   border: none;
   border-radius: 5px;
-  color: var(--dark-color);
+  color: var(--primary-color);
+  font-size: 1.4rem;
   font-weight: bold;
+}
+
+@media only screen and (min-width: 1024px) {
+  .main-button {
+    font-size: 2rem;
+  }
 }
