--- a/src/styles/components/TransparentButton.css
+++ b/src/styles/components/TransparentButton.css
@@ -1,11 +1,10 @@
 .transparent-button {
-  color: black;
-  color: var(--dark-color);
-  min-width: 250px;
-  max-width: 350px;
+  width: 80vw;
+  min-width: 270px;
   margin: 7px;
   padding: 12px 10px;
   background-color: transparent;
+  color: var(--dark-color);
   font-size: 2.8rem;
   font-weight: bold;
   text-align: center;
@@ -16,14 +15,14 @@
 @media only screen and (min-width: 768px) {
   .transparent-button {
     min-width: 300px;
-    max-width: 500px;
+    max-width: 400px;
   }
 }
 
 @media only screen and (min-width: 1024px) {
   .transparent-button {
-    min-width: 500px;
-    max-width: 700px;
+    min-width: 400px;
+    max-width: 500px;
     padding: 15px 10px;
   }
 }
