--- a/src/styles/components/MainButton.css
+++ b/src/styles/components/MainButton.css
@@ -1,6 +1,7 @@
 .main-button {
+  max-width: 470px;
   margin: 10px;
-  padding: 10px 50px;
+  padding: 10px;
   background-color: var(--third-color);
   border: none;
   border-radius: 5px;
