--- a/src/styles/components/NotesList.css
+++ b/src/styles/components/NotesList.css
@@ -5,9 +5,19 @@
   align-items: center;
 }
 
-.note-button-container {
+.note-button-and-date-container {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .notes-list-container {
+    align-items: flex-start;
+  }
+
+  .note-button-and-date-container {
+    align-items: flex-start;
+  }
 }
