--- a/src/styles/containers/notePage.css
+++ b/src/styles/containers/notePage.css
@@ -3,3 +3,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media only screen and (min-width: 768px) {
+  .note-page {
+    width: 90vw;
+    align-items: flex-start;
+  }
+}
