--- a/src/styles/containers/patientPage.css
+++ b/src/styles/containers/patientPage.css
@@ -4,3 +4,9 @@
   align-items: center;
   width: 90vw;
 }
+
+@media only screen and (min-width: 768px) {
+  .patient-page {
+    align-items: flex-start;
+  }
+}
