--- a/src/styles/containers/admission.css
+++ b/src/styles/containers/admission.css
@@ -4,7 +4,7 @@
   justify-content: center;
 }
 
-.form-container {
+.admission-form-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: left;
