--- a/src/styles/components/GoogleLoginButton.css
+++ b/src/styles/components/GoogleLoginButton.css
@@ -7,6 +7,7 @@
   background-color: transparent;
   border: 1px solid var(--secondary-color);
   border-radius: 20px;
+  font-size: 1.6rem;
 }
 
 .google-icon {
