--- a/src/styles/containers/login.css
+++ b/src/styles/containers/login.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 70px;
+  padding-top: 60px;
 }
 
 .img {
@@ -15,20 +15,22 @@
     transform: scale(1); /* Escala normal del contenedor */
   }
   50% {
-    transform: scale(1.1); /* Escala aumentada durante la mitad de la animación */
+    transform: scale(1.06); /* Escala aumentada durante la mitad de la animación */
   }
 }
 
 .login-message-container {
   display: flex;
   justify-content: center;
+  max-width: 300px;
   animation: attentionAnimation 2s infinite;
 }
 
 .login-message {
-  max-width: 60%;
+  max-width: 200px;
+  font-size: 1.8rem;
   text-align: center;
-  margin: 20px;
+  margin: 50px;
 }
 
 
