--- a/src/styles/components/Search.css
+++ b/src/styles/components/Search.css
@@ -11,7 +11,7 @@
   margin-bottom: 5px;
   border: 0.5px solid var(--secondary-color);
   border-radius: 7px;
-  padding: 10px;
+  padding: 10px 20px;
   font-size: 1.6rem;
 }
 
