--- a/src/styles/components/AllNotes.css
+++ b/src/styles/components/AllNotes.css
@@ -16,20 +16,35 @@
 }
 
 .note-content {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   width: 80vw;
 }
 
+.note-content p {
+  margin: 17px 0;
+}
+
+
 @media only screen and (min-width: 768px) {
+
+  .all-notes {
+    align-items: flex-start;
+  }
+
+  .note-container {
+    align-items: flex-start;
+  }
+
   .note-content {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     width: 80vw;
     max-width: 400px;
   }
+
 }
 
 @media only screen and (min-width: 1024px) {
   .note-content {
-    max-width: 500px;
+    max-width: 670px;
   }
 }
