--- a/src/styles/components/AllNotes.css
+++ b/src/styles/components/AllNotes.css
@@ -16,12 +16,22 @@
 }
 
 .note-content {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   width: 80vw;
 }
 
 .note-content p {
   margin: 17px 0;
+}
+
+.credit-container {
+  width: 100%;
+}
+
+.credit {
+  margin: 0;
+  font-size: 1.4rem;
+  font-style: italic;
 }
 
 
