--- a/src/styles/components/HeaderSimple.css
+++ b/src/styles/components/HeaderSimple.css
@@ -7,7 +7,8 @@
 }
 
 .header-simple h1 {
-  margin: 10px 20px;
+  margin: 20px 10px;
+  font-size: 2.4rem;
 }
 
 @media only screen and (min-width: 768px) {
